[tool.poetry]
name = "ideascale-importer"
version = "0.4.0"
description = ""
authors = []
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "3.8.3"
aiosignal = "1.3.1"
async-timeout = "4.0.2"
asyncpg = "0.27.0"
asyncpg-stubs = "0.27.0"
attrs = "22.1.0"
beautifulsoup4 = "4.11.1"
charset-normalizer = "2.1.1"
click = "8.1.3"
commonmark = "0.9.1"
frozenlist = "1.3.3"
idna = "3.4"
markdownify = "0.11.6"
mccabe = "0.7.0"
multidict = "6.0.3"
packaging = "22.0"
pycodestyle = "2.10.0"
pydantic = "~2.1"
pyflakes = "3.0.1"
pygments = "2.13.0"
six = "1.16.0"
soupsieve = "2.3.2.post1"
tomli = "2.0.1"
typeguard = "2.13.3"
typer = "0.7.0"
typing-inspect = "0.8.0"
typing-extensions = "~4.7.1"
yarl = "1.8.2"
loguru = "^0.6.0"
brotlipy = "^0.7.0"
lxml = "4.9.3"
rich = "^13.3.4"

openpyxl = "^3.1.2"

[tool.poetry.group.dev.dependencies]
mypy = ">=1"
mypy-extensions = ">=1"
ruff = "^0.0.261"
black = "^23.3.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"

[tool.poetry.scripts]
ideascale-importer = "ideascale_importer.app:app"

[tool.black]
line-length = 132
target-version = ['py311']

[tool.ruff]
line-length = 132
target-version = 'py311'
exclude = ["tests"]
extend-select = ["D"]

[[tool.mypy.overrides]]
module = [
    "brotli",
    "markdownify"
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
