[package]
name = "catalyst-toolbox"
version = "0.3.0"
edition = "2021"

authors = ["danielsanchezq <daniel.sanchez@iohk.io>"]
license = "MIT OR Apache-2.0"
description = "Rust based CLI utility for catalyst operations"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "catalyst-toolbox"
test = false
bench = false

[dependencies]
clap = { workspace = true }

assert_fs = "1"
bech32 = "0.8.1"
csv = "1.1"
wallet = { path = "../../chain-wallet-libs/wallet" }
chain-addr = { path = "../../chain-libs/chain-addr" }
chain-core = { path = "../../chain-libs/chain-core" }
chain-crypto = { path = "../../chain-libs/chain-crypto" }
chain-ser = { path = "../../chain-libs/chain-ser" }
chain-storage = { path = "../../chain-libs/chain-storage" }
chain-time = { path = "../../chain-libs/chain-time" }
chain-impl-mockchain = { workspace = true }
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }
itertools = "0.10"
jcli = { path = "../../jormungandr/jcli" }
jormungandr-lib = { workspace = true }
jormungandr-integration-tests = { path = "../../jormungandr/testing/jormungandr-integration-tests" }
jormungandr-automation = { path = "../../jormungandr/testing/jormungandr-automation" }
thor = { path = "../../jormungandr/testing/thor" }
jortestkit = { path = "../../jortestkit" }
rayon = "1.5"
rust_decimal = "1.16"
rust_decimal_macros = "1"
futures = "0.3"
once_cell = "1.8"
reqwest = { workspace = true }
rand = "0.8.3"
rand_chacha = "0.3"
governor = { version = "0.4", features = ["std", "jitter"], default-features = false}
regex = "1.5"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.8.17"
sscanf = "0.1"
color-eyre = "0.6"
thiserror = "1.0"
tokio = { version = "1.8", features = ["rt", "macros"] }
url = "2.2"
hex = "0.4"
image = "0.23"
qrcode = "0.12"
quircs = "0.10.0"
symmetric-cipher = { path = "../../chain-wallet-libs/symmetric-cipher" }
graphql_client.workspace = true
gag = "1"
snapshot-lib = { path = "../snapshot-lib" }
fraction = "0.12"
tracing.workspace = true
tracing-subscriber.workspace = true
rusqlite = { version = "0.29.0", features = ["bundled"] }
vit-servicing-station-lib = { path = "../../vit-servicing-station/vit-servicing-station-lib", optional = true }

[dev-dependencies]
rand_chacha = "0.3"
assert_cmd = "2"
predicates = "2"
assert_fs = "1.0.0"
chain-vote = { path = "../../chain-libs/chain-vote" }
proptest = { workspace = true, branch = "master" }
test-strategy = "0.2"
serde_test = "1"
snapshot-lib =  { path = "../snapshot-lib", features = ["proptest"] }
vit-servicing-station-tests = { path = "../../vit-servicing-station/vit-servicing-station-tests" }

[build-dependencies]
versionisator = "1.0.3"

[features]
test-api = ["vit-servicing-station-lib"]
