[package]
name = "snapshot-lib"
version = "0.1.0"
edition = "2021"

authors = ["Giacomo Pasini <giacomo.pasini@iohk.io>"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jormungandr-lib = { path = "../../jormungandr/jormungandr-lib" }
serde = { version = "1", features = ["derive"] }
proptest = { workspace = true, branch = "master", optional = true }
chain-addr = { path = "../../chain-libs/chain-addr", optional = true }
test-strategy = { version = "0.2", optional = true }
serde_test = { version = "1", optional = true }
hex = { version = "0.4" }
thiserror = "1.0"
fraction = { version = "0.12", features = ["with-serde-support"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
bech32 = "0.8.1"
chain-crypto = { path = "../../chain-libs/chain-crypto" }
rust_decimal = "1.16"
rust_decimal_macros = "1"

[dev-dependencies]
serde_test = "1"
test-strategy = "0.2"
serde_json = "1.0"
serde_yaml = "0.8.17"
proptest = { workspace = true, branch = "master" }
chain-addr = { path = "../../chain-libs/chain-addr" }

[features]
proptest = ["dep:proptest", "dep:chain-addr", "dep:test-strategy", "dep:serde_test"]
test-api = []
