[package]
name = "snapshot-lib"
version = "0.1.0"
edition = "2021"

authors = ["Giacomo Pasini <giacomo.pasini@iohk.io>"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jormungandr-lib = { workspace = true }
proptest = { workspace = true, branch = "master", optional = true }
chain-addr = { path = "../../chain-libs/chain-addr" }
test-strategy = { version = "0.2", optional = true }
hex = { version = "0.4" }
thiserror = "1.0"
fraction = { version = "0.12", features = ["with-serde-support"] }
reqwest = { workspace = true }
bech32 = "0.8.1"
chain-crypto = { path = "../../chain-libs/chain-crypto" }
rust_decimal = "1.16"
rust_decimal_macros = "1"

rand = { workspace = true }
rand_core = { workspace = true }
rand_chacha = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
serde_test = { workspace = true, optional = true }


[dev-dependencies]
test-strategy = "0.2"

serde_test = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

proptest = { workspace = true, branch = "master" }
chain-addr = { path = "../../chain-libs/chain-addr" }

[features]
proptest = ["dep:proptest", "dep:test-strategy", "dep:serde_test"]
test-api = []
