[package]
name = "voting-hir"
version = "0.1.0"
edition = "2021"

authors = ["Giacomo Pasini <giacomo.pasini@iohk.io>"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jormungandr-lib = { git = "https://github.com/input-output-hk/jormungandr.git", branch = "master" }
serde = { version = "1", features = ["derive"], optional = true }
proptest = { git = "https://github.com/input-output-hk/proptest.git", branch = "master", optional = true }
hex = { version = "0.4", optional = true }

[features]
proptest = ["dep:proptest", "hex"]