[package]
name = "btree"
version = "0.1.0"
authors = ["Enzo Cioppettini <ecioppettini@atixlabs.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
byteorder = "1.3.2"
thiserror = "1.0.9"
memmap = "0.7.0"
parking_lot = "0.11.0"

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.9"
rand = "0.7"
criterion = "0.3"
hex = "0.4.0"
tempfile = "3.1.0"

[[bench]]
name = "benchmark"
harness = false

# this is so criterion's command line options work
[lib]
bench = false

[features]
default = []