[package]
name = "chain-addr"
version = "0.1.0"
authors = ["Vincent Hanquez <vincent.hanquez@iohk.io>", "Nicolas Di Prima <nicolas.diprima@iohk.io>"]
license = "MIT OR Apache-2.0"
edition = "2021"
keywords = [ "Cardano", "Wallet", "Crypto", "Address" ]

[features]
property-test-api = ["chain-crypto/property-test-api", "quickcheck", "proptest", "test-strategy"]

[dependencies]
bech32 = "0.8"
chain-core = { path = "../chain-core" }
chain-crypto = { path = "../chain-crypto" }
cryptoxide = "0.4"

serde = { workspace = true, features = [ "derive" ] }

quickcheck = { version = "0.9", optional = true }
proptest = { workspace = true, optional = true }
test-strategy = { version = "0.2", optional = true }

[dev-dependencies]
quickcheck = "0.9"
chain-crypto = { path = "../chain-crypto", features = [ "property-test-api" ] }
proptest = { workspace = true }
test-strategy = "0.2"
