[package]
name = "chain-crypto"
version = "0.1.0"
authors = ["Vincent Hanquez <vincent.hanquez@iohk.io>"]
license = "MIT OR Apache-2.0"
edition = "2018"
keywords = [ "Crypto", "VRF", "Ed25519", "MMM" ]

[dependencies]
bech32 = "0.7"
cryptoxide = "0.3"
curve25519-dalek-ng = "4.0"
ed25519-dalek = "1.0"
sha2 = "0.9"
digest = "^0.9"
generic-array = "^0.14"
rand_core = "0.6"
rand = { version = "0.8", features = ["small_rng"], optional = true }
quickcheck = { version = "0.9", optional = true }
ed25519-bip32 = "0.3"
hex = "0.4.0"
typed-bytes = { path = "../typed-bytes" }

criterion = { version = "0.3.0", optional = true }

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.9"
rand = { version = "0.8", features = ["small_rng"] }

[features]
with-bench = ["criterion"]
property-test-api = [ "quickcheck", "rand" ]

[[bench]]
harness = false
name = "vrf"
required-features = ["with-bench"]

[[bench]]
harness = false
name = "sumed25519"
required-features = ["with-bench"]
