[package]
name = "chain-crypto"
version = "0.1.0"
authors = ["Vincent Hanquez <vincent.hanquez@iohk.io>"]
license = "MIT OR Apache-2.0"
edition = "2018"
keywords = [ "Crypto", "VRF", "Ed25519", "MMM" ]

[dependencies]
bech32 = "0.7"
cryptoxide = "0.3"
curve25519-dalek-ng = { version = "4.0", optional = true}
# TODO replace with the crates.io version once it has faster scalar multiplication
eccoxide = { git = "https://github.com/eugene-babichenko/eccoxide.git", branch = "fast-u64-scalar-mul", features = ["fast-u64-scalar-mul"], optional = true }
ed25519-dalek = "1.0"
sha2 = "0.9"
digest = "^0.9"
generic-array = "^0.14"
rand_core = "0.6"
rand = { version = "0.8", features = ["small_rng"], optional = true }
rayon = "1.5"
quickcheck = { version = "0.9", optional = true }
ed25519-bip32 = "0.4"
hex = "0.4.0"
typed-bytes = { path = "../typed-bytes" }

criterion = { version = "0.3.0", optional = true }


[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.9"
rand = { version = "0.8", features = ["small_rng"] }
smoke = "^0.2.1"

[build-dependencies]
cfg-if = "1"

[features]
with-bench = ["criterion"]
property-test-api = [ "quickcheck", "rand" ]
default = ["ristretto255"]
ristretto255 = ["curve25519-dalek-ng"]
p256k1 = ["eccoxide"]

[[bench]]
harness = false
name = "vrf"
required-features = ["with-bench"]

[[bench]]
harness = false
name = "sumed25519"
required-features = ["with-bench"]
