[package]
name = "chain-evm"
version = "0.1.0"
edition = "2021"

[dependencies]
evm = "0.33.0"
imhamt = { path = "../imhamt" }
chain-ser = { path = "../chain-ser" }
primitive-types = "0.10.1"
base64 = { version = "0.13.0", default-features = false, features = ["alloc"] }
blake2 = { version = "0.9.1", git = "https://github.com/near/near-blake2.git", rev = "736ff607cc8160af87ffa697c14ebef85050138f", default-features = false }
borsh = { version = "0.8.2", default-features = false }
bn = { package = "aurora-bn", version = "0.1.0", git = "https://github.com/aurora-is-near/aurora-bn.git", default-features = false, features = ["std"] }
libsecp256k1 = { version = "0.3.5", default-features = false }
num = { version = "0.4.0", default-features = false, features = ["alloc"] }
ripemd160 = { version = "0.9.1", default-features = false }
rlp = { version = "0.5.0", default-features = false }
sha2 = { version = "0.10.1", default-features = false }
sha3 = { version = "0.10.0", default-features = false }
wee_alloc = { version = "0.4.5", default-features = false }
logos = { version = "0.12", default-features = false, features = ["export_derive"] }
ethabi = { version = "16.0", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
byte-slice-cast = { version = "1.0", default-features = false }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.7.3"
proptest = "1.0.0"
test-strategy = "0.1"
quickcheck = "0.9"
