[package]
name = "chain-impl-mockchain"
version = "0.1.0"
authors = [ "Nicolas Di Prima <nicolas.diprima@iohk.io>"
          , "Vincent Hanquez <vincent.hanquez@iohk.io>"
          , "Eelco Dolstra <edolstra@gmail.com>"
          , "Mikhail Zabaluev <mikhail.zabaluev@gmail.com>"
          , "Alexander Vershilov <alexander.vershilov@gmail.com>"
          ]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "^1.0", optional = true }
serde_derive = { version = "^1.0", optional = true }
chain-core = { path = "../chain-core" }
chain-addr = { path = "../chain-addr" }
chain-crypto = { path = "../chain-crypto" }
chain-storage = { path = "../chain-storage" }
chain-time = { path = "../chain-time" }
typed-bytes = { path = "../typed-bytes" }
rand_core = "0.5"
imhamt = { path = "../imhamt" }
sparse-array = { path = "../sparse-array" }
strum = "0.15.0"
strum_macros = "0.15.0"
cfg-if = "0.1"
quickcheck = { version = "0.9", optional = true }
quickcheck_macros = { version = "0.8", optional = true }
ed25519-bip32 = { version = "0.3", optional = true }
thiserror = "1.0"
lazy_static = { version = "1.3.0", optional = true }
cardano-legacy-address = { path= "../cardano-legacy-address" }
rand_chacha = { version = "0.2", optional = true }
[features]
property-test-api = ["quickcheck", "quickcheck_macros", "lazy_static", "rand_chacha", "ed25519-bip32"]
with-bench = []

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.8"
chain-core = { path = "../chain-core", features=["property-test-api"]}
chain-crypto = { path = "../chain-crypto", features=["property-test-api"]}
chain-time = { path = "../chain-time", features=["property-test-api"]}
chain-addr = { path = "../chain-addr", features=["property-test-api"]}
ed25519-bip32 = "0.3"
rand_chacha = "0.2"
lazy_static = "1.3.0"
