[package]
name = "chain-impl-mockchain"
version = "0.1.0"
authors = ["dev@iohk.io"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
chain-core = { path = "../chain-core" }
chain-addr = { path = "../chain-addr" }
chain-crypto = { path = "../chain-crypto" }
chain-ser = { path = "../chain-ser" }
chain-time = { path = "../chain-time" }
chain-vote = { path = "../chain-vote" }
typed-bytes = { path = "../typed-bytes" }
rand_core = "0.6"
imhamt = { path = "../imhamt" }
sparse-array = { path = "../sparse-array" }
strum = "0.21.0"
strum_macros = "0.21.0"
hex = { version = "0.4.2", default-features = false, features = [ "std" ] }
quickcheck = { version = "0.9", optional = true }
quickcheck_macros = { version = "0.9", optional = true }
ed25519-bip32 = { version = "0.4", optional = true }
thiserror = "1.0"
lazy_static = { version = "1.3.0", optional = true }
cardano-legacy-address = { path= "../cardano-legacy-address" }
rand_chacha = { version = "0.3", optional = true }
rayon = "1.5.0"
criterion = { version = "0.3.0", optional = true }
rand = "0.8"

[features]
property-test-api = [
        "chain-crypto/property-test-api",
        "chain-time/property-test-api",
        "chain-addr/property-test-api",
        "quickcheck",
        "quickcheck_macros",
        "lazy_static",
        "rand_chacha",
        "ed25519-bip32"]
with-bench = ["criterion","property-test-api"]

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.9"
chain-core = { path = "../chain-core"}
chain-crypto = { path = "../chain-crypto", features=["property-test-api"]}
chain-time = { path = "../chain-time", features=["property-test-api"]}
chain-addr = { path = "../chain-addr", features=["property-test-api"]}
ed25519-bip32 = "0.4"
rand_chacha = "0.3"
lazy_static = "1.3.0"
tempfile = "3.1.0"

[[bench]]
harness = false
name = "tally"
required-features = ["with-bench"]
