[package]
name = "chain-network"
version = "0.1.0"
authors = ["Mikhail Zabaluev <mikhail.zabaluev@iohk.io>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
chain-crypto = { path = "../chain-crypto" }
async-trait = "0.1"
futures = "0.3"
http-body = "0.4"
pin-project = "1.0"
prost = "0.8"
rand_core = "0.6"
thiserror = "1.0"

[dependencies.tonic]
version = "0.5"
default-features = false
features = ["codegen", "prost"]

[dev-dependencies]
rand = "0.8"

[build-dependencies.tonic-build]
version = "0.5"
default-features = false
features = ["prost"]

[features]
default = ["transport", "legacy"]
transport = ["tonic/transport", "tonic-build/transport"]
legacy = []
codegen-rustfmt = ["tonic-build/rustfmt"]
